Throw TypeError when calling class constructor without 'new'
ES6 class constructors cannot be invoked as regular functions - they
must be called with 'new'. This commit implements that check for both
compiled and interpreted modes.

Changes:
- Add isClassConstructor field to ScriptNode with getter/setter
- Set isClassConstructor flag in IRFactory when processing class definitions
- Propagate flag through CodeGenUtils to JSDescriptor
- Check flag in JSFunction.call() to throw TypeError
- Add same check in Interpreter for interpreted class constructors
- Fix derived class constructor return value for top-level interpreter calls

5 test262 tests now pass completely.

--- a/rhino/src/main/resources/org/mozilla/javascript/resources/Messages.properties
+++ b/rhino/src/main/resources/org/mozilla/javascript/resources/Messages.properties
@@ -54,6 +54,9 @@ msg.ctor.not.found =\
 msg.not.ctor =\
     "{0}" is not a constructor.
 
+msg.class.constructor.call =\
+    Class constructor {0} cannot be invoked without ''new''.
+
 # FunctionObject
 msg.varargs.ctor =\
     Method or constructor "{0}" must be static with the signature \
