Implement ES2022 private class fields and methods (interpreted mode)
Add support for private class members (#privateField, #privateMethod) in
interpreted mode:

- Add PRIVATE_NAME token and lexer support for #identifier syntax
- Add isPrivate flag to ClassElement for private member parsing
- Update Parser to handle private class elements and private property access
- Add GETPROP_PRIVATE/SETPROP_PRIVATE tokens for private member access
- Update IRFactory to generate private member nodes in class IR
- Implement runtime private member storage using associated values
- Add PrivateKey class for keying private values by constructor + name
- Implement brand checking for private member access validation
- Update CodeGenerator to emit private member bytecodes
- Update Interpreter to execute private member access
- Fix regression in super property access (SUPER_PROPERTY_ACCESS handling)

Private members are stored as associated values on instances, keyed by
a PrivateKey(constructor, name) pair. Brand checking validates that the
target object was constructed by the class that defines the private member.

--- a/rhino/src/main/resources/org/mozilla/javascript/resources/Messages.properties
+++ b/rhino/src/main/resources/org/mozilla/javascript/resources/Messages.properties
@@ -528,6 +528,24 @@ msg.class.extends.not.callable =\
 msg.class.extends.prototype.not.object =\
     Class extends value does not have valid prototype property
 
+msg.private.not.in.class =\
+    Private field or method access is only valid inside a class
+
+msg.private.brand.check.failed =\
+    Cannot access private member on object that is not an instance of the class
+
+msg.private.setter.only =\
+    Cannot read private accessor that only has a setter
+
+msg.private.getter.only =\
+    Cannot write to private accessor that only has a getter
+
+msg.private.method.assign =\
+    Cannot assign to private method
+
+msg.private.member.not.found =\
+    Private member not found
+
 msg.no.paren.catch =\
     missing ( before catch-block condition
 
