Add ES6 class syntax validation for early errors
Add parser checks for ES6 class early errors:
- Duplicate constructor definitions
- Getter/setter/generator methods cannot be named "constructor"
- Static public methods cannot be named "prototype"

Fixes 16 test262 tests.

--- a/rhino/src/main/resources/org/mozilla/javascript/resources/Messages.properties
+++ b/rhino/src/main/resources/org/mozilla/javascript/resources/Messages.properties
@@ -522,6 +522,15 @@ msg.no.brace.class =\
 msg.class.unexpected.static =\
     unexpected 'static' in class body
 
+msg.class.duplicate.constructor =\
+    A class may only have one constructor
+
+msg.class.special.constructor =\
+    Class constructor may not be an accessor or generator
+
+msg.class.static.prototype =\
+    Classes may not have a static property named 'prototype'
+
 msg.class.extends.not.callable =\
     Class extends value is not a constructor or null
 
