Validate getter/setter parameter counts per ES6 spec
ES6 requires:
- Getters must have exactly 0 formal parameters
- Setters must have exactly 1 formal parameter

Added validation in both class method and object literal method parsing
to enforce these constraints.

Fixes 3 test262 tests:
- getter-param-dflt.js (expressions/class, statements/class, expressions/object)

--- a/rhino/src/main/resources/org/mozilla/javascript/resources/Messages.properties
+++ b/rhino/src/main/resources/org/mozilla/javascript/resources/Messages.properties
@@ -531,6 +531,12 @@ msg.class.special.constructor =\
 msg.class.static.prototype =\
     Classes may not have a static property named 'prototype'
 
+msg.getter.param.count =\
+    Getter must have exactly zero formal parameters
+
+msg.setter.param.count =\
+    Setter must have exactly one formal parameter
+
 msg.class.extends.not.callable =\
     Class extends value is not a constructor or null
 
