Disallow default initializers on rest parameters
ES6 spec requires that rest parameters cannot have default initializers.
For example: function f(...x = []) {} is a syntax error.

The fix detects when a rest parameter is being parsed and reports an error
if an assignment operator follows the parameter name.

Fixes 18 test262 dflt-params-rest.js tests across:
- language/expressions/arrow-function
- language/expressions/class (method, gen-method, async-method, static variants)
- language/expressions/function
- language/expressions/generators
- language/statements/class (method, gen-method, async-method, static variants)
- language/statements/function
- language/statements/generators

--- a/rhino/src/main/resources/org/mozilla/javascript/resources/Messages.properties
+++ b/rhino/src/main/resources/org/mozilla/javascript/resources/Messages.properties
@@ -369,6 +369,9 @@ msg.no.paren.after.parms =\
 msg.parm.after.rest =\
     parameter after rest parameter
 
+msg.no.rest.default =\
+    Rest parameter may not have a default initializer
+
 msg.no.object.rest =\
     object rest properties in destructuring are not supported
 
