--- a/rhino/src/main/resources/org/mozilla/javascript/resources/Messages.properties
+++ b/rhino/src/main/resources/org/mozilla/javascript/resources/Messages.properties
@@ -334,6 +334,12 @@ msg.const.no.init =\
 msg.lexical.decl.not.in.block =\
     lexical declarations (let/const) can only be declared inside a block
 
+msg.generator.decl.not.in.block =\
+    generator declarations can only be declared inside a block
+
+msg.class.decl.not.in.block =\
+    class declarations can only be declared inside a block
+
 msg.bad.object.init =\
     invalid object initializer
 
