Fix ES6 yield identifier handling and labeled function declarations
This commit addresses several ES6 conformance issues:

1. Function declarations as labeled statement body in strict mode
   - Per ES6, function declarations cannot be the body of a labeled
     statement in strict mode. Added error check in Parser.nameOrLabel().

2. yield as identifier in non-strict mode outside generators
   - Per ES6, yield is only a keyword inside generator functions.
   - In non-strict mode outside generators, yield is a valid identifier.
   - Modified TokenStream to demote YIELD to NAME when not in strict
     mode and not inside a generator function (body or parameters).

3. yield as class name
   - Per ES6 10.2.1, class definitions are always strict mode code.
   - yield cannot be used as a class name since it's reserved in
     strict mode. Added check in Parser.classDeclaration().

4. yield as generator function name
   - Generator functions cannot be named "yield" since yield is a
     keyword inside generator function bodies. Added check in
     Parser.function().

These changes fix 46+ test262 tests related to yield identifier handling
and labeled statement validation.

--- a/rhino/src/main/resources/org/mozilla/javascript/resources/Messages.properties
+++ b/rhino/src/main/resources/org/mozilla/javascript/resources/Messages.properties
@@ -340,6 +340,9 @@ msg.generator.decl.not.in.block =\
 msg.class.decl.not.in.block =\
     class declarations can only be declared inside a block
 
+msg.func.decl.labeled.strict =\
+    function declarations cannot be the body of a labeled statement in strict mode
+
 msg.bad.object.init =\
     invalid object initializer
 
