Fix ES6 completion value semantics and strict mode function declarations
- Reject function declarations in if/else body in strict mode (ES6 13.6)
- Fix completion values for if statements with empty branches
- Fix completion values for for/while/do-while loops (ES6+ only)
- Fix completion values for switch statements with no matching case
- Fix completion values for try/catch blocks with empty bodies
- Add es6-test-status.sh script for tracking ES6 conformance

54 more test262 tests now pass.

--- a/rhino/src/main/resources/org/mozilla/javascript/resources/Messages.properties
+++ b/rhino/src/main/resources/org/mozilla/javascript/resources/Messages.properties
@@ -343,6 +343,9 @@ msg.class.decl.not.in.block =\
 msg.func.decl.labeled.strict =\
     function declarations cannot be the body of a labeled statement in strict mode
 
+msg.func.decl.if.strict =\
+    function declarations cannot be the body of an if/else statement in strict mode
+
 msg.bad.object.init =\
     invalid object initializer
 
