Disallow function declarations in iteration statement bodies (ES6)
ES6 13.7.2/13.7.4/13.7.5 prohibit function declarations as the body of
do-while, while, for, for-in, and for-of statements. This is different
from if/else statements where Annex B allows them in non-strict mode.

Fixes 8 test262 tests.

--- a/rhino/src/main/resources/org/mozilla/javascript/resources/Messages.properties
+++ b/rhino/src/main/resources/org/mozilla/javascript/resources/Messages.properties
@@ -346,6 +346,9 @@ msg.func.decl.labeled.strict =\
 msg.func.decl.if.strict =\
     function declarations cannot be the body of an if/else statement in strict mode
 
+msg.func.decl.not.stmt.position =\
+    function declarations cannot appear in statement position
+
 msg.bad.object.init =\
     invalid object initializer
 
