ES6: Allow 'let' as identifier in non-strict mode
Per ES6 spec, 'let' is a contextual keyword that can be used as an
identifier in non-strict mode when not at the start of a declaration.

This fixes:
- for (let; ; ) - 'let' as init expression
- for (var let in {}) - 'let' as variable name
- let = 1 - 'let' as assignment target

Also adds check that 'let' cannot be used as a bound name in let/const
declarations (e.g., 'for (let let in {})' is still a SyntaxError).

Fixes 5 test262 tests:
- language/statements/for/head-lhs-let.js
- language/statements/for-in/head-lhs-let.js
- language/statements/for-in/head-var-bound-names-let.js
- language/statements/for-in/identifier-let-allowed-as-lefthandside-expression-not-strict.js
- language/statements/for-of/head-var-bound-names-let.js

--- a/rhino/src/main/resources/org/mozilla/javascript/resources/Messages.properties
+++ b/rhino/src/main/resources/org/mozilla/javascript/resources/Messages.properties
@@ -316,6 +316,9 @@ msg.let.redecl =\
 msg.let.redecl.by.var =\
     redeclaration of let {0}.
 
+msg.let.not.valid.id =\
+    'let' is not a valid identifier in let/const declarations
+
 msg.parm.redecl =\
     redeclaration of formal parameter {0}.
 
