ES6: Implement iterator closing for for-of loops
Implements ES6 IteratorClose semantics for for-of loops. When a for-of
loop exits via break, return, or throw, the iterator's return() method
is now called to properly close the iterator.

Changes:
- Add ENUM_CLOSE opcode to close ES6 iterators
- Add enumClose() runtime method in ScriptRuntime
- Wrap for-of loops in try-finally to ensure iterator closing
- Track 'done' flag in IdEnumeration to avoid closing exhausted iterators
- Initialize LOCAL_BLOCK locals to null for bytecode verification
- Handle null IdEnumeration when exception occurs before iterator created

This fixes 13 test262 tests including iterator-close-via-break/continue/
return/throw and generator-close-via-* tests. Net improvement of 8 tests
(4 edge cases with error suppression during throw completion need more work).

--- a/rhino/src/main/resources/org/mozilla/javascript/resources/Messages.properties
+++ b/rhino/src/main/resources/org/mozilla/javascript/resources/Messages.properties
@@ -706,6 +706,9 @@ msg.iterator.primitive =\
 msg.not.iterable = \
     {0} is not iterable
 
+msg.return.not.object = \
+    Iterator return method must return an object
+
 msg.invalid.for.each = \
     invalid for each loop
 
