ES6: Add initial module support with import/export parsing and runtime
Implement ES6 module support including:
- Parser support for all import/export syntax variants
- New AST nodes: ImportDeclaration, ImportSpecifier, ExportDeclaration, ExportSpecifier
- Token types: IMPORT, EXPORT, FROM, AS
- Module evaluation in Context with proper linking and circular dependency handling
- ModuleScope for runtime import binding resolution
- ModuleAnalyzer for static module analysis
- Test262 module loader integration

Key fixes during implementation:
- Wrap CLASS/anonymous function nodes in EXPR_RESULT for export default
- Handle import bindings through ModuleScope rather than defineSymbol
- Prevent stack overflow on self-referential module imports
- Add module caching in Test262ModuleLoader

~210 of 1086 test262 module tests now pass (~19%). Remaining work
includes proper circular import timing for default exports.

--- a/rhino/src/main/resources/org/mozilla/javascript/resources/Messages.properties
+++ b/rhino/src/main/resources/org/mozilla/javascript/resources/Messages.properties
@@ -627,6 +627,46 @@ msg.syntax =\
 msg.unexpected.eof =\
     Unexpected end of file
 
+# ES6 Modules
+msg.import.not.module =\
+    import declarations may only appear at top level of a module
+
+msg.export.not.module =\
+    export declarations may only appear at top level of a module
+
+msg.import.expected.from =\
+    expected ''from'' after import clause
+
+msg.import.expected.as =\
+    expected ''as'' after ''*'' in import
+
+msg.import.expected.binding =\
+    expected identifier in import
+
+msg.import.expected.clause =\
+    expected import clause
+
+msg.import.expected.module =\
+    expected module specifier string
+
+msg.import.expected.comma.or.brace =\
+    expected '','' or ''}}'' in import specifiers
+
+msg.export.expected.from =\
+    expected ''from'' after ''*'' in export
+
+msg.export.expected.binding =\
+    expected identifier in export
+
+msg.export.expected.module =\
+    expected module specifier string
+
+msg.export.expected.declaration =\
+    expected declaration after export
+
+msg.export.expected.comma.or.brace =\
+    expected '','' or ''}}'' in export specifiers
+
 msg.XML.bad.form =\
     illegally formed XML syntax
 
