ES6: Add module linking validation and parser position checks
Implements ES6 spec 16.2.1.5.3.1 linking-phase validation:

- Step 9: Validate indirect exports resolve during linking
- Step 12: Validate import bindings resolve during linking

Adds parser enforcement that import/export declarations can only
appear at module top level (not inside functions, control structures,
blocks, labeled statements, or switch cases).

Fixes:
- ResolvedBinding.equals() now compares isNamespace field
- Added validateIndirectExports() to ModuleRecord
- Added nestingOfStatement tracking to Parser
- Added error messages for top-level requirement

Test results: language/module-code improved from 494/584 (84.59%)
to 364/584 (62.33%) expected failures - 130 tests now passing.

--- a/rhino/src/main/resources/org/mozilla/javascript/resources/Messages.properties
+++ b/rhino/src/main/resources/org/mozilla/javascript/resources/Messages.properties
@@ -634,6 +634,12 @@ msg.import.not.module =\
 msg.export.not.module =\
     export declarations may only appear at top level of a module
 
+msg.import.decl.at.top.level =\
+    import declarations may only appear at top level
+
+msg.export.decl.at.top.level =\
+    export declarations may only appear at top level
+
 msg.import.expected.from =\
     expected ''from'' after import clause
 
