ES6: Implement new.target meta-property
Add support for the ES6 new.target meta-property that allows functions
to detect whether they were called as a constructor (via 'new') or as
a regular function call.

Implementation:
- Add NEW_TARGET token type
- Parser recognizes 'new.target' syntax inside functions
- IRFactory transforms NEW_TARGET nodes
- Interpreter adds DoNewTarget instruction handler
- BodyCodegen (compiler) emits code to load newTargetLocal
- KeywordLiteral supports NEW_TARGET node type

When called with 'new', new.target returns the constructor function.
When called normally, new.target returns undefined.

Note: The interpreter implementation is partial - some tests pass only
in compiled mode. Full interpreter support for super() propagation and
Reflect.construct needs additional work.

Fixes 16+ tests related to new.target across various categories.
Removes new.target from the UNSUPPORTED_FEATURES list.

--- a/rhino/src/main/resources/org/mozilla/javascript/resources/Messages.properties
+++ b/rhino/src/main/resources/org/mozilla/javascript/resources/Messages.properties
@@ -1234,3 +1234,9 @@ msg.dataview.offset.range =\
 
 msg.dataview.length.range =\
   DataView length is out of range
+# new.target
+msg.new.target.not.function =\
+  new.target expression is not allowed here
+
+msg.no.target.after.new =\
+  missing target after new.
