ES6: Add iterable check for array destructuring assignment (~17 tests)
Array destructuring now validates that the source value is iterable before
attempting to destructure. This fixes tests where destructuring non-iterables
like boolean, null, undefined, number, or symbol values should throw TypeError.

Changes:
- Add Token.REQ_ITERABLE and Icode_REQ_ITERABLE for iterable validation
- Add ScriptRuntime.requireIterable() that checks for Symbol.iterator
- Add msg.not.iterable error message
- Parser adds iterable check in destructuringArray for ES6+ assignment
  expressions (not function parameters or for-of which use iterator protocol)

Tests fixed:
- array-elision-val-{bool,null,num,symbol,undef}.js (5 tests)
- array-empty-val-{bool,null,num,symbol,undef}.js (5 tests)
- Several other array destructuring tests

ES6 conformance: 91.8% -> 92.0% (759 -> 742 failures)

--- a/rhino/src/main/resources/org/mozilla/javascript/resources/Messages.properties
+++ b/rhino/src/main/resources/org/mozilla/javascript/resources/Messages.properties
@@ -785,6 +785,9 @@ msg.null.to.object =\
 msg.undef.to.object =\
     Cannot convert undefined to an object.
 
+msg.not.iterable =\
+    {0} is not iterable.
+
 msg.cant.convert.to.bigint =\
     Cannot convert {0} to an BigInt.
 
