--- a/rhino/src/main/resources/org/mozilla/javascript/resources/Messages.properties
+++ b/rhino/src/main/resources/org/mozilla/javascript/resources/Messages.properties
@@ -128,6 +128,9 @@ msg.bad.incr =\
 msg.bad.yield =\
     yield must be in a function.
 
+msg.bad.await =\
+    await is only valid in async functions.
+
 msg.yield.parenthesized =\
     yield expression must be parenthesized.
 
