ES6: Fix rest parameters edge cases
1. Setter functions cannot have rest parameters
   - Added SyntaxError when setter uses rest param syntax
   - Per ES6 14.3.1 SetterParameters: PropertySetParameterList
     (rest params not allowed)

2. Rest params should unmap arguments object
   - Functions with rest parameters should have unmapped arguments
   - Added hasRestParameter check to Arguments.sharedWithActivation
   - Per ES6 9.4.4.6 CreateUnmappedArgumentsObject

Fixes 2 test262 tests:
- language/arguments-object/unmapped/via-params-rest.js
- language/rest-parameters/no-alias-arguments.js

--- a/rhino/src/main/resources/org/mozilla/javascript/resources/Messages.properties
+++ b/rhino/src/main/resources/org/mozilla/javascript/resources/Messages.properties
@@ -561,6 +561,9 @@ msg.getter.param.count =\
 msg.setter.param.count =\
     Setter must have exactly one formal parameter
 
+msg.setter.rest.param =\
+    Setter function argument must not be a rest parameter
+
 msg.class.extends.not.callable =\
     Class extends value is not a constructor or null
 
