ES2017: Add async class method support and fix related ES6 issues
- Add async method parsing in classes (parseClassElement)
- Handle async static methods and async private methods
- Reject await as identifier/label in module code and async functions
- Fix lexical new.target in arrow functions (both interpreter and compiled)
- Add iterator result type validation per ES6 7.4.2 spec

Fixes 164 test262 tests including:
- async-method/await-as-label-identifier tests
- async-method-static/await-as-label-identifier tests
- elements/async-private-method await tests
- arrow-function/lexical-new.target tests
- labeled/value-await-module tests

--- a/rhino/src/main/resources/org/mozilla/javascript/resources/Messages.properties
+++ b/rhino/src/main/resources/org/mozilla/javascript/resources/Messages.properties
@@ -761,6 +761,9 @@ msg.not.iterable = \
 msg.return.not.object = \
     Iterator return method must return an object
 
+msg.next.not.object = \
+    Iterator result {0} is not an object
+
 msg.invalid.for.each = \
     invalid for each loop
 
