ES2017: Reject async function declarations in statement position
Per ES2017 spec, async function declarations (unlike regular function
declarations in non-strict mode via Annex B) are not allowed in:
- if/else statement bodies
- labeled statements
- with statement bodies
- while/do-while/for loop bodies

This aligns async function declaration handling with generator function
declarations, which are already correctly rejected in these positions.

Fixes 6 test262 tests:
- if-async-fun-else-async-fun.js
- if-async-fun-else-stmt.js
- if-async-fun-no-else.js
- if-stmt-else-async-fun.js
- labeled/decl-async-function.js
- with/decl-async-fun.js

--- a/rhino/src/main/resources/org/mozilla/javascript/resources/Messages.properties
+++ b/rhino/src/main/resources/org/mozilla/javascript/resources/Messages.properties
@@ -343,6 +343,9 @@ msg.lexical.decl.not.in.block =\
 msg.generator.decl.not.in.block =\
     generator declarations can only be declared inside a block
 
+msg.async.decl.not.in.block =\
+    async function declarations can only be declared inside a block
+
 msg.class.decl.not.in.block =\
     class declarations can only be declared inside a block
 
