ES2022: Add class feature improvements
- Implement private field compound assignment (this.#x += 1)
  Adds SETPROP_PRIVATE_OP token and handling in both interpreter
  and compiled modes for all compound operators including logical
  assignment (&&=, ||=, ??=)

- Implement static initialization blocks
  Basic support for static { } blocks in class definitions

- Add early error for delete on private fields
  Rejects delete this.#field at parse time per spec

These changes fix 233 additional test262 tests, bringing the
language test pass rate from 19,245 to 19,478.

--- a/rhino/src/main/resources/org/mozilla/javascript/resources/Messages.properties
+++ b/rhino/src/main/resources/org/mozilla/javascript/resources/Messages.properties
@@ -739,6 +739,9 @@ msg.bad.id.strict =\
 msg.no.delete.strict.id =\
     Delete of an unqualified identifier in strict mode.
 
+msg.no.delete.private.field =\
+    Delete of a private field is not allowed.
+
 msg.no.unary.expr.on.left.exp =\
     "{0}" is not allowed on the left-hand side of "**".
 
