--- a/rhino/src/main/resources/org/mozilla/javascript/resources/Messages.properties
+++ b/rhino/src/main/resources/org/mozilla/javascript/resources/Messages.properties
@@ -131,6 +131,15 @@ msg.bad.yield =\
 msg.bad.await =\
     await is only valid in async functions.
 
+msg.bad.return.static.block =\
+    return is not allowed in static initialization blocks.
+
+msg.bad.yield.static.block =\
+    yield is not allowed in static initialization blocks.
+
+msg.bad.await.static.block =\
+    await is not allowed in static initialization blocks.
+
 msg.yield.parenthesized =\
     yield expression must be parenthesized.
 
