Optional chaining with private fields, duplicate private names, and #constructor validation (50 tests)
- Support optional chaining with private fields (obj?.#field, o?.c.#f)
  by propagating OPTIONAL_CHAINING flag through GETPROP_PRIVATE nodes
  in parser, IRFactory, CodeGenerator, and BodyCodegen
- Detect duplicate private name declarations (only getter+setter pairs
  are allowed; all other duplicates are SyntaxError)
- Reject #constructor as a private name per ES spec
- Validate escaped characters at IdentifierStart position in private
  names (reject control/format chars like NULL, ZWNJ, ZWJ)

--- a/rhino/src/main/resources/org/mozilla/javascript/resources/Messages.properties
+++ b/rhino/src/main/resources/org/mozilla/javascript/resources/Messages.properties
@@ -600,6 +600,12 @@ msg.private.method.assign =\
 msg.private.member.not.found =\
     Private member not found
 
+msg.private.name.duplicate =\
+    Duplicate private name
+
+msg.private.constructor =\
+    Private name #constructor is not allowed
+
 msg.no.paren.catch =\
     missing ( before catch-block condition
 
