Regex v flag (unicodeSets), import.meta, top-level await, and module fixes (~220 tests)
- Implement regex `v` flag with Unicode Sets support: set intersection (&&),
  subtraction (--), nested classes, string literals, and emoji data
- Add import.meta expression support (ES2020) with url property
- Fix top-level await to work at module scope (not just inside async functions)
- Fix `export * as default from` syntax
- Improve stack frame matching for generated Rhino classes
- Expand Node.js http stub with more methods
- Update test262.properties: net ~220 fewer expected failures

--- a/rhino-tools/src/main/resources/org/mozilla/javascript/tools/resources/Messages.properties
+++ b/rhino-tools/src/main/resources/org/mozilla/javascript/tools/resources/Messages.properties
@@ -100,6 +100,9 @@ msg.format2 =\
 msg.format3 =\
     "{0}", line {1}: {2}
 
+msg.format4 =\
+    "{0}": {1}
+
 msg.uncaughtJSException =\
     exception from uncaught JavaScript throw: {0}
 
