--- a/rhino/src/main/resources/org/mozilla/javascript/resources/Messages.properties
+++ b/rhino/src/main/resources/org/mozilla/javascript/resources/Messages.properties
@@ -682,6 +682,9 @@ msg.import.expected.module =\
 msg.import.expected.comma.or.brace =\
     expected '','' or ''}}'' in import specifiers
 
+msg.import.meta.outside.module =\
+    import.meta is only valid in module code
+
 msg.export.expected.from =\
     expected ''from'' after ''*'' in export
 
@@ -1023,6 +1026,9 @@ msg.illegal.character =\
 
 msg.invalid.escape =\
     invalid Unicode escape sequence
+
+msg.invalid.unicode.property =\
+    invalid or unsupported Unicode property escape: \\p'{'{0}'}'
 
 msg.bad.namespace =\
     not a valid default namespace statement. \
